deploy: a1caa400c6436b886007f0676caaebc538483363

--- a/print.html
+++ b/print.html
@@ -148,7 +148,8 @@
 <p>Este material foi produzido pelo grupo PET Computação da UFRGS. O material
 é versionado com Git e o código fonte encontra-se 
 <a href="https://github.com/petcomputacaoufrgs/intro-ao-git">hospedado no GitHub</a>.
-Estamos abertos para <em>feedbacks</em> e sugestões.</p>
+Estamos abertos para <em>feedbacks</em> e sugestões. O curso é publicado através de
+Github Pages e Github Actions.</p>
 <h1 id="o-que-É-o-git"><a class="header" href="#o-que-É-o-git">O Que É O Git?</a></h1>
 <p>Se eu fosse resumir a resposta, ela seria: git é uma ferramenta distribuída de controle de versionamento de <em>software</em>. As alterações de uma versão do <em>software</em> são
 chamadas &quot;<em>commit</em>&quot;. Os arquivos que contêm as versões são chamados
